@@ -14,7 +14,7 @@ various statistical models with linear predictors.
 \tabular{ll}{
 Package: \tab effects\cr
 Version: \tab 4.1-1\cr
-Date: \tab 2019-04-13\cr
+Date: \tab 2019-04-20\cr
 Depends: \tab R (>= 3.5.0), carData\cr
 Suggests: \tab pbkrtest (>= 0.4-4), nlme, MASS, poLCA, heplots, splines, ordinal, car, knitr, betareg, alr4\cr
 Imports: \tab lme4, nnet, lattice, grid, colorspace, graphics, grDevices, stats, survey, utils, estimability\cr
@@ -70,10 +70,11 @@ Maintainer: John Fox <jfox@mcmaster.ca>
     \emph{Journal of Statistical Software}
     \bold{32:1}, 1--24, <\url{http://www.jstatsoft.org/v32/i01/}>.
     
-    Fox, J. and S. Weisberg (forthcoming).
+    Fox, J. and S. Weisberg (2018).
     Visualizing Fit and Lack of Fit in Complex Regression Models:
         Effect Plots with Partial Residuals.
-    \emph{Journal of Statistical Software}.
+    \emph{Journal of Statistical Software}
+    \bold{87:9}, 1--27, <\url{https://www.jstatsoft.org/v087/i09}>.
 }
 
 
